# mike-t-4b46-tlhn-net-00

./: .deploy_url  .env.example  .gitignore  .plan  PRODUCT.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  ui-verify.cjs
backend/: Cargo.toml  drizzle.config.ts  package.json
backend/drizzle/: 0000_baseline.sql  0001_create_core_tables.sql  0002_create_users.sql  0003_create_news_items.sql
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
backend/src/: accounts.rs  app.rs  app.test.ts  app.ts  auth.rs  config.rs  config.ts  db.rs  e2e.test.ts  email.rs  lib.rs  main.rs  models.rs  server.ts  testSupport.ts
backend/src/db/: client.ts  health.ts  schema.ts
backend/src/routes/: auth.rs  factions.rs  factions.ts  health.rs  messages.rs  messages.ts  mod.rs  news.rs  subscriptions.rs  subscriptions.ts
backend/src/services/: factionDisplayName.ts  messagePostRateLimit.ts
backend/tests/: api.rs
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  styles.css
shared/: package.json  tsconfig.json
shared/src/: factions.ts  index.ts  messages.ts  news.ts  subscriptions.ts
