[package]
name = "tlhn-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["compression-full", "cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "=2.4.1"
home = "=0.5.11"
